// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compile templates returns 404 when a page does not exist 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>404!</title>
</head>
<body>
  Oh no, you're lost!
</body>
</html>"
`;

exports[`Compile templates returns a page with variables 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>Example site title</title>
</head>
<body>
  Page with vars
</body>
</html>"
`;

exports[`Compile templates returns an entry in a section 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>I am always live!</title>
</head>
<body>
  <h1>I am always live!</h1>
</body>
</html>"
`;

exports[`Compile templates returns the index.njk template for the homepage 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>Pizza!</title>
</head>
<body>
  Hello!
</body>
</html>"
`;

exports[`Custom filters field filter returns the correct value 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>Document</title>
</head>
<body>
  I am working!
</body>
</html>"
`;
